audio group + audio input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 
-<lib-audio-input></lib-audio-input>
+<app-audio-input-group>
+  <lib-audio-input></lib-audio-input>
+  <lib-audio-input></lib-audio-input>
+</app-audio-input-group>
 <router-outlet></router-outlet>
