character + page acceuil settings lang

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 
-<app-audio-input-group>
-  <lib-audio-input></lib-audio-input>
-  <lib-audio-input></lib-audio-input>
-</app-audio-input-group>
+<app-lang-config-selector></app-lang-config-selector>
 <router-outlet></router-outlet>
