--- a/src/app/lang/component/lang-config-selector/lang-config-selector.component.html
+++ b/src/app/lang/component/lang-config-selector/lang-config-selector.component.html
@@ -6,7 +6,7 @@
   <div>
     <h4>Quelle est votre langue d'origine ?</h4>
 
-    <ng-container *ngTemplateOutlet="langlist"></ng-container>
+    <ng-container [ngTemplateOutlet]="langlist" [ngTemplateOutletContext]="{indexName: 'selectedOriginIndex'}"></ng-container>
   </div>
 
   <div>
@@ -15,13 +15,17 @@
     <ng-container [ngTemplateOutlet]="langlist" [ngTemplateOutletContext]="{indexName: 'selectedLearningIndex'}"></ng-container>
   </div>
 
+
+  <div>
+    {{selectedLearningIndex + '-' + selectedOriginIndex}}
+    <button (click)="confirm()" [disabled]="!isValid">Confirmer</button>
+
+  </div>
+
 </div>
 
 <ng-template #langlist let-indexName="indexName">
   <div class="flex-row full even wrap">
-    <div *ngFor="let lang of langs; index as i" class="flex-col center" (click)="click(indexName, i)" [ngClass]="getClass(indexName,i)">
-      <img src="{{ lang.flag }}" width="75" />
-      <span [innerHTML]="lang.name['fr']"></span>
-    </div>
+    <app-lang-avatar *ngFor="let lang of langs; index as i" [lang]="lang" (click)="click(indexName, i)" [ngClass]="getClass(indexName,i)"></app-lang-avatar>
   </div>
 </ng-template>
